# RSSight

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  TODO.md  docker-compose.yml  prd.json  progress.txt
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  feeds.py  profiles.py  read_later.py  summaries.py
backend/app/models/: __init__.py  articles.py  feeds.py  profiles.py  read_later.py
backend/app/services/: __init__.py  articles.py  data_sync.py  feeds.py  json_write_policy.py  profiles.py  read_later.py  scheduler.py  summary.py  translation.py  url_autofill.py
backend/tests/: test_articles_service.py  test_data_sync.py  test_feed_storage.py  test_feeds_api.py  test_json_write_published_at_skip.py  test_profile_cleanup.py  test_profiles_api.py  test_read_later_api.py  test_read_later_service.py  test_scheduled_data_sync.py  test_scheduler.py  test_smoke.py  test_startup_sync.py  test_summaries_api.py  test_summary_service.py  test_translation.py  test_url_autofill.py
data/: README.md
docs/: README.md  api-contract.md  architecture.md  deployment-linux.md  deployment-windows.md  developer-guide.md  frontend-styling.md  ralph-workflow-windows.md  ralph-workflow.md  story-template.md  testing-strategy.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: ci-check.cmd  ci-check.ps1  ci-check.sh  start.cmd  start.sh
(+51 files in other folders)
