[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webrssreader-backend"
version = "0.1.0"
description = "Backend foundation for WebRSSReader."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "black>=25.1.0",
  "mypy>=1.17.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# 日常/CI 默认不跑需真实 API 的集成测试；手工跑时用: pytest -m integration
addopts = '-m "not integration"'
markers = [
  "integration: 需真实 profile/API 的集成测试，仅在手选时运行 (pytest -m integration)",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
